--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,29 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Other files and folders
-.settings/
+# dependencies
+/node_modules
+node_modules
+*/node_modules
 
-# Executables
-*.swf
-*.air
-*.ipa
-*.apk
+/.pnp
+.pnp.js
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.gitignore
+package.json
+package-lock.json
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
